<resources>
    <string name="app_name">Лаб. 4</string>
    <string name="objects_title">Об\'єкти</string>
    <string name="point_title">Крапка</string>
    <string name="line_title">Лінія</string>
    <string name="rectangle_title">Прямокутник</string>
    <string name="ellipse_title">Еліпс</string>
    <string name="circle_line_title">Лінія з кругами</string>
    <string name="cube_title">Куб</string>
    <string name="delete_title">Очистити</string>
    <string name="back_title">Назад</string>
    <string name="alert">Куди лізеш! Більше не можна!</string>
</resources>