<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/point_tool"
		android:title="@string/point_title"
		android:icon="@drawable/point_icon"
		app:showAsAction="always" />

	<item android:id="@+id/line_tool"
		android:title="@string/line_title"
		android:icon="@drawable/line_icon"
		app:showAsAction="always" />

	<item android:id="@+id/rectangle_tool"
		android:title="@string/rectangle_title"
		android:icon="@drawable/rectangle_icon"
		app:showAsAction="always" />

	<item android:id="@+id/ellipse_tool"
		android:title="@string/ellipse_title"
		android:icon="@drawable/ellipse_icon"
		app:showAsAction="always" />

	<item android:id="@+id/objects"
		android:title="@string/objects_title"
		app:showAsAction="always" >
		<menu>

			<item android:id="@+id/point"
				android:title="@string/point_title" />

			<item android:id="@+id/line"
				android:title="@string/line_title" />

			<item android:id="@+id/rectangle"
				android:title="@string/rectangle_title" />

			<item android:id="@+id/ellipse"
				android:title="@string/ellipse_title" />

		</menu>

	</item>

</menu>